# GPC_standalone

./: .gitignore  CMakeLists.txt  README.md  gpc_evaluate.cpp  gpc_train.cpp  sparse_matching_gpc.cpp
